Closed Bug 1434526 Opened 6 years ago Closed 5 years ago

Failed to build Gecko Profiler on linux/arm

Categories

(Core :: Gecko Profiler, defect, P5)

ARM
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox60 --- wontfix
firefox68 --- fixed

People

(Reporter: ashie, Assigned: glandium)

Details

Attachments

(1 file)

After bug1433775 was landed, I met the following build error on Yocto-2.0 (for Renesas RZ/G1M) with gcc-4.9 & binutils 2.25.1:

>  0:07.59 {standard input}: Assembler messages:
>  0:07.59 {standard input}:349: Error: bad expression -- `b #_ZL14SigprofHandleriP9siginfo_tPv'
>  0:10.28 /home/aho/Projects/iwg20m-bsp-2.0/build-gcc4.9/tmp/work/cortexa15hf-vfp-neon-poky-linux-gnueabi/firefox/git-r0/git/config/rules.mk:1047: recipe for target 'Unified_cpp_tools_profiler0.o' failed
>  0:10.28 make[4]: *** [Unified_cpp_tools_profiler0.o] Error 1

at following lines:

  * https://dxr.mozilla.org/mozilla-central/rev/474d58c9137360c0fa1c85cdd11e3313b33b7cad/mfbt/LinuxSignal.h#28
  * https://dxr.mozilla.org/mozilla-central/rev/474d58c9137360c0fa1c85cdd11e3313b33b7cad/tools/profiler/core/platform-linux-android.cpp#218

It seems that it's concerned with bug1238661.
I succeeded to build it when I revert the fix in bug1238661.
I can confirm the compile error, now will try again with revert of patch from bug1238661
With the patch reverted from #1238661, the build continues and is successfull. With gcc-7.3 and binutils-2.29.1 on my end, also did a bit of runtime testing with success.
Summary: Failed to build Gecko Profile on linux/arm → Failed to build Gecko Profiler on linux/arm
The problem seems to be that bug1238661 works around a bug in clang, so by reverting it the build with gcc can be fixed whereas it breaks again the build with clang. Pick your poison!
We could always special-case this with #ifdefs. Not pretty but doable.
Priority: -- → P5
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → DUPLICATE

Since bug 1463035 is blocked on Android tests using newer emulator images, let's go with a lighter version of it that can land now.

Assignee: nobody → mh+mozilla
Status: RESOLVED → REOPENED
Resolution: DUPLICATE → ---

Bug 1463035 exists to remove it entirely, because as mentioned in bug
1238661 comment 4, we don't actually need this workaround anymore. But
that bug has been blocked for a while because the Android emulator
images we use for testing, for some reason, use a kernel older than any
real device using the same version of Android would use.

Let's however fix the problems it causes with GCC on non-Android ARM
Linux by making it Android-only, rather than removing it entirely.

Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/a8e6586172fd
Make MOZ_SIGNAL_TRAMPOLINE Android-only. r=gsvelto
Status: REOPENED → RESOLVED
Closed: 6 years ago5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: